issue #940, #941: remove double scroll in filter cols, add defaul state

--- a/imports/stylus/global.styl
+++ b/imports/stylus/global.styl
@@ -944,6 +944,11 @@ div.error-msg
 .dropdown-menu {
   max-height:450px;
   overflow-y: auto;
+  .inner.open {
+    .dropdown-menu.inner {
+      overflow: hidden;
+    }
+  }
 }
 
 .open {
